--- a/package.json
+++ b/package.json
@@ -7,19 +7,43 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tauri:dev": "pnpm tauri dev"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/core": "^6.0.17",
+    "@mantine/dates": "^6.0.17",
+    "@mantine/form": "^6.0.17",
+    "@mantine/hooks": "^6.0.17",
+    "@mantine/modals": "^6.0.17",
+    "@mantine/notifications": "^6.0.17",
+    "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-query-devtools": "^4.32.0",
+    "@tauri-apps/api": "^1.4.0",
+    "@types/lodash": "^4.14.196",
+    "@types/node": "^20.4.5",
+    "axios": "^1.4.0",
+    "axios-tauri-adapter": "^0.3.0",
+    "dayjs": "^1.11.9",
+    "i18next": "^23.4.1",
+    "lodash": "^4.17.21",
+    "mantine-datatable": "^2.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tauri-apps/api": "^1.4.0"
+    "react-i18next": "^13.0.3",
+    "react-router-dom": "^6.14.2",
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.4.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.4",
-    "@tauri-apps/cli": "^1.4.0"
+    "vite": "^4.4.4"
   }
 }
