--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
     "react-router-dom": "^6.14.2",
+    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1"
   },
   "devDependencies": {
