--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "react-i18next": "^13.0.3",
     "react-router-dom": "^6.14.2",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
-    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
-    "warframe-items": "^1.1260.95"
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
