--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "http-all", "path-all", "fs-all", "shell-open"] }
+tauri = { version = "1.4", features = [ "notification-all", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-exists", "fs-create-dir", "http-all", "path-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
