--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "i18next": "^23.4.1",
     "lodash": "^4.17.21",
     "mantine-datatable": "^2.9.3",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
