--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,12 +14,16 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "notification-all", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-exists", "fs-create-dir", "http-all", "path-all", "shell-open"] }
+tauri = { version = "1.4", features = [ "fs-remove-file", "fs-copy-file", "notification-all", "fs-write-file", "fs-read-dir", "fs-exists", "http-all", "path-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 regex = "1.9.1"
 directories = "5.0.1"
+hyper = "0.14.27"
+hyper-tls = "0.5"
+tokio = { version = "1", features = ["full"] }
+csv = "1.1.6"
 
 [dependencies.tauri-plugin-sql]
 git = "https://github.com/tauri-apps/plugins-workspace"
