--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,11 +20,13 @@ serde_json = "1.0"
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 regex = "1.9.1"
 directories = "5.0.1"
-hyper = "0.14.27"
-hyper-tls = "0.5"
 tokio = { version = "1", features = ["full"] }
 csv = "1.1.6"
 polars = { version = "0.30.0", features = ["lazy"] }
+rusqlite = "0.29.0"
+once_cell = "1.7"
+chrono = "0.4"
+reqwest = "0.11"
 
 [dependencies.tauri-plugin-sql]
 git = "https://github.com/tauri-apps/plugins-workspace"
