--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "tauri:dev": "pnpm tauri dev"
+    "tauri:dev": "set RUST_BACKTRACE=full && pnpm tauri dev"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
