--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "quantframe-react"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "A App for warframe market"
+authors = ["Kenya-DK"]
 license = ""
 repository = ""
 edition = "2021"
@@ -17,21 +17,16 @@ tauri-build = { version = "1.4", features = [] }
 tauri = { version = "1.4", features = [ "fs-remove-file", "fs-copy-file", "notification-all", "fs-write-file", "fs-read-dir", "fs-exists", "http-all", "path-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 regex = "1.9.1"
 directories = "5.0.1"
 tokio = { version = "1", features = ["full"] }
 csv = "1.1.6"
 polars = { version = "0.30.0", features = ["lazy"] }
-rusqlite = "0.29.0"
+sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"] }
 once_cell = "1.7"
 chrono = "0.4"
 reqwest = "0.11"
 
-[dependencies.tauri-plugin-sql]
-git = "https://github.com/tauri-apps/plugins-workspace"
-branch = "v1"
-features = ["sqlite"] # or "postgres", or "mysql"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
