--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
+    "chart.js": "^4.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
