--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.4", features = [] }
 [dependencies]
 tauri = { version = "1.4", features = [ "fs-remove-file", "fs-copy-file", "notification-all", "fs-write-file", "fs-read-dir", "fs-exists", "http-all", "path-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { version = "1.0", features = ["raw_value"] }
 regex = "1.9.1"
 directories = "5.0.1"
 tokio = { version = "1", features = ["full"] }
@@ -27,7 +27,7 @@ once_cell = "1.7"
 chrono = "0.4"
 reqwest = "0.11"
 eyre = "0.6.8"
-sea-query = "0"
+sea-query = { version = "0", features = ["with-json"] }
 
 
 [features]
