--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "@tauri-apps/api": "^1.4.0",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.5",
+    "chart.js": "^4.3.0",
     "dayjs": "^1.11.9",
     "i18next": "^23.4.1",
     "lodash": "^4.17.21",
     "mantine-datatable": "^2.9.3",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
-    "chart.js": "^4.3.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
