--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "target": "ES2020",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "useDefineForClassFields": true,
     "lib": [
       "ES2020",
