--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
-    "react-router-dom": "^6.14.2",
-    "vite-plugin-svgr": "^4.1.0"
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
@@ -46,6 +45,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.4"
+    "vite": "^4.4.4",
+    "vite-plugin-svgr": "^2.4.0"
   }
 }
