add socket and more chat

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket#v1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
