--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.5",
     "chart.js": "^4.3.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "i18next": "^23.4.1",
     "lodash": "^4.17.21",
