add logs on foundend

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "quantframe-react"
-version = "0.0.1"
+version = "1.0.0"
 description = "Quantframe"
 authors = ["Kenya-DK"]
 license = ""
-repository = ""
+repository = "https://github.com/Kenya-DK/quantframe-react"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
