--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,7 +29,7 @@ chrono = "0.4"
 reqwest = "0.11"
 eyre = "0.6.8"
 sea-query = { version = "0", features = ["with-json"] }
-
+zip = "0.6"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
