--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
+    "tauri:build": "pnpm tauri build --debug",
     "tauri:dev": "pnpm tauri dev"
   },
   "dependencies": {
