--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "Quantframe"
-version = "1.0.1"
-description = "QF is an algorithmic trading program for Warframe, it is able to check warframe.market for good trades. It recognises which items can be bought for low and sold for profit, this helps to create a more dynamic and faster market as well as helping the users of QF to make some profit."
+version = "1.2.0"
+description = "Quantframe"
 authors = ["Kenya-DK"]
 license = ""
 repository = "https://github.com/Kenya-DK/quantframe-react"
