--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ zip = "0.6"
 migration = { path = "./migration" }
 service = { path = "./service" }
 entity = { path = "./entity" }
+sha256 = "1.5.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
