--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ chrono = "0.4"
 reqwest = "0.11"
 eyre = "0.6.8"
 zip = "0.6"
+actix-web = "4"
 
 migration = { path = "./migration" }
 service = { path = "./service" }
