--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ reqwest = "0.11"
 eyre = "0.6.8"
 zip = "0.6"
 actix-web = "4"
+actix-cors = "0.7.0"
 
 migration = { path = "./migration" }
 service = { path = "./service" }
