--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ migration = { path = "./migration" }
 service = { path = "./service" }
 entity = { path = "./entity" }
 sha256 = "1.5.0"
+jsonwebtoken = "9.3.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
