--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5.2", features = [ "window-create", "system-tray", "fs-copy-file", "path-all", "fs-write-file", "fs-read-dir", "fs-exists", "notification-all", "http-all", "fs-remove-file", "protocol-all", "updater", "shell-open"] }
+tauri = { version = "1.5.2", features = [ "dialog-open", "window-create", "system-tray", "fs-copy-file", "path-all", "fs-write-file", "fs-read-dir", "fs-exists", "notification-all", "http-all", "fs-remove-file", "protocol-all", "updater", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
