--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tauri:build": "pnpm tauri build --debug",
-    "tauri:dev": "pnpm tauri dev"
+    "tauri:dev": "pnpm tauri dev -- -- source"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
