--- a/package.json
+++ b/package.json
@@ -12,24 +12,29 @@
     "tauri:dev": "pnpm tauri dev -- -- source"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.2",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mantine/core": "^7.10.0",
-    "@mantine/dates": "^7.10.0",
-    "@mantine/form": "^7.10.0",
-    "@mantine/hooks": "^7.10.0",
-    "@mantine/modals": "^7.10.0",
-    "@mantine/notifications": "^7.10.0",
-    "@tanstack/react-query": "^5.29.2",
+    "@mantine/dates": "^7.12.0",
+    "@mantine/form": "^7.12.0",
+    "@mantine/hooks": "^7.12.0",
+    "@mantine/modals": "^7.12.0",
+    "@mantine/notifications": "^7.12.0",
+    "@mantine/tiptap": "^7.12.0",
+    "@tanstack/react-query": "^5.51.23",
     "@tauri-apps/api": "^1.5.3",
-    "chart.js": "^4.4.2",
+    "@tiptap/extension-link": "^2.5.9",
+    "@tiptap/pm": "^2.5.9",
+    "@tiptap/react": "^2.5.9",
+    "@tiptap/starter-kit": "^2.5.9",
+    "chart.js": "^4.4.3",
     "clsx": "^2.1.0",
-    "dayjs": "^1.11.10",
-    "i18next": "^23.11.1",
-    "mantine-datatable": "^7.9.1",
+    "dayjs": "^1.11.12",
+    "i18next": "^23.12.2",
+    "mantine-datatable": "^7.11.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
