--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mantine/core": "^7.10.0",
+    "@mantine/core": "^7.12.0",
     "@mantine/dates": "^7.12.0",
     "@mantine/form": "^7.12.0",
     "@mantine/hooks": "^7.12.0",
@@ -26,7 +26,6 @@
     "@mantine/tiptap": "^7.12.0",
     "@tanstack/react-query": "^5.51.23",
     "@tauri-apps/api": "^1.5.3",
-    "@tiptap/extension-link": "^2.5.9",
     "@tiptap/pm": "^2.5.9",
     "@tiptap/react": "^2.5.9",
     "@tiptap/starter-kit": "^2.5.9",
@@ -41,7 +40,8 @@
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
     "recharts": "2",
-    "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket#v1"
+    "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket#v1",
+    "tiptap-markdown": "^0.8.10"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.11",
