Revert "Full English Rewrite"
This reverts commit 832d198a2504ad08cc3621495d2fa88117db9c2d.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,9 +45,9 @@
     },
     /* Linting */
     "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src/**/*"
