--- a/package.json
+++ b/package.json
@@ -25,7 +25,15 @@
     "@mantine/notifications": "^7.16.0",
     "@mantine/tiptap": "^7.16.0",
     "@tanstack/react-query": "^5.64.1",
-    "@tauri-apps/api": "^1.6.0",
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-http": "~2",
+    "@tauri-apps/plugin-notification": "~2",
+    "@tauri-apps/plugin-process": "~2",
+    "@tauri-apps/plugin-shell": "~2",
+    "@tauri-apps/plugin-updater": "~2",
+    "@tauri-apps/plugin-websocket": "~2",
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
@@ -40,11 +48,10 @@
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
     "recharts": "2.15.0",
-    "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket#v1",
     "tiptap-markdown": "^0.8.10"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.11",
+    "@tauri-apps/cli": "^2.2.5",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
