--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,7 @@ tauri-plugin-process = "2"
 tauri-plugin-shell = "2"
 tauri-plugin-notification = "2"
 tauri-plugin-websocket = "2"
+tauri-plugin-os = "2"
 
 # Other dependencies
 tokio = { version = "1.29.0", features = ["full"] }
