--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,11 +34,12 @@ tauri-plugin-http = "2"
 tauri-plugin-process = "2"
 tauri-plugin-shell = "2"
 tauri-plugin-notification = "2"
-tauri-plugin-websocket = "2"
 tauri-plugin-os = "2"
-
 # Other dependencies
+futures-util = "0.3.31"
 tokio = { version = "1.29.0", features = ["full"] }
+tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
+uuid = {version = "1.17.0", features = ["v4"] }
 regex = "1.9.1"
 chrono = "0.4"
 reqwest = { version = "0.11", features = ["json"] }
