--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "tauri:dev": "pnpm tauri dev"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.2",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mantine/core": "^8.1.0",
-    "@mantine/dates": "^8.1.0",
-    "@mantine/form": "^8.1.0",
-    "@mantine/hooks": "^8.1.0",
-    "@mantine/modals": "^8.1.0",
-    "@mantine/notifications": "^8.1.0",
-    "@mantine/tiptap": "^8.1.0",
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
+    "@mantine/core": "8.2.2",
+    "@mantine/dates": "8.2.2",
+    "@mantine/form": "8.2.2",
+    "@mantine/hooks": "8.2.2",
+    "@mantine/modals": "8.2.2",
+    "@mantine/notifications": "8.2.2",
+    "@mantine/tiptap": "8.2.2",
     "@tanstack/react-query": "^5.64.1",
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-dialog": "~2",
@@ -40,9 +40,10 @@
     "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "i18next": "^24.2.1",
+    "i18next": "^25.3.2",
     "mantine-datatable": "^7.17.1",
     "react": "^18.3.1",
+    "react-best-gradient-color-picker": "^3.0.14",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
