Adds Tokio dependency
Adds Tokio as a dependency with the "full" feature set.

This is likely in preparation for asynchronous operations or other
functionality that benefits from an asynchronous runtime.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,7 +36,7 @@ tauri-plugin-shell = "2"
 tauri-plugin-notification = "2"
 tauri-plugin-os = "2"
 # Other dependencies
-
+tokio = {version =  "1.45.1", features = ["full"] }
 regex = "1.9.1"
 chrono = "0.4"
 zip = "0.6"
