--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mantine/tiptap": "8.2.2",
     "@tanstack/react-query": "^5.64.1",
     "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-clipboard-manager": "^2.3.0",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-http": "~2",
@@ -43,7 +44,6 @@
     "i18next": "^25.3.2",
     "mantine-datatable": "^7.17.1",
     "react": "^18.3.1",
-    "react-best-gradient-color-picker": "^3.0.14",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
