--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,7 @@ tauri-plugin-process = "2"
 tauri-plugin-shell = "2"
 tauri-plugin-notification = "2"
 tauri-plugin-os = "2"
+tauri-plugin-clipboard-manager = "2.3.0"
 # Other dependencies
 tokio = {version =  "1.45.1", features = ["full"] }
 regex = "1.9.1"
