Improves application setup and trade logging
Adds development mode configuration for API URLs.
Updates trade logging to include trade time and notification variables.
Removes notification state management.
Adds `reqwest` dependency for making HTTP requests to external APIs, specifically for discord notifications.
Updates settings to be more flexible in trade parsing.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,10 +33,11 @@ tauri-plugin-dialog = "2"
 tauri-plugin-http = "2"
 tauri-plugin-process = "2"
 tauri-plugin-shell = "2"
-tauri-plugin-notification = "2"
+tauri-plugin-notification = "2.0.0"
 tauri-plugin-os = "2"
 tauri-plugin-clipboard-manager = "2.3.0"
 # Other dependencies
+reqwest = { version = "0.12.19", features = ["json"] }
 tokio = {version =  "1.45.1", features = ["full"] }
 regex = "1.9.1"
 chrono = "0.4"
