--- a/src-tauri/utils/Cargo.toml
+++ b/src-tauri/utils/Cargo.toml
@@ -9,3 +9,4 @@ regex = "1.0"
 zip = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+uuid = {version = "1.17.0", features = ["v5"] }
