--- a/src-tauri/service/Cargo.toml
+++ b/src-tauri/service/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-entity = { path = "../entity" }
 chrono = "0.4"
+serde_json = "1.0"
+entity = { path = "../entity" }
+utils = { path = "../utils" }
 
 [dependencies.sea-orm]
 version = "0.12.4" # sea-orm version
