--- a/src-tauri/qf_api/Cargo.toml
+++ b/src-tauri/qf_api/Cargo.toml
@@ -20,7 +20,8 @@ rand = "0.9.1"
 tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
 futures-util = "0.3.31"
 uuid = {version = "1.17.0", features = ["v4"] }
-chrono = "0.4.41"
+chrono = { version = "0.4.41", features = ["serde"] }
+zip = "0.6"
 governor = { version = "0.10.0", features = ["std"] }
 
 [dev-dependencies]
