Refactors Riven details modal and related logic
Refactors the Riven details modal to enhance user experience and data presentation.

- Restructures the modal layout for better readability and organization.
- Implements improved data display components for key Riven attributes.
- Adds a section for similar auctions fetched from warframe.market.
- Introduces financial summary and roll evaluation components.
- Updates translations to reflect changes in terminology and presentation.
- Consolidates data fetching and processing logic for improved performance.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,8 +43,8 @@ regex = "1.9.1"
 chrono = "0.4"
 zip = "0.6"
 sha256 = "1.5.0"
-# wf-market = { path = "C:/Users/Kenya/Desktop/Andet/Coding/Warframe/wf-market" }
-wf-market = { git = "https://github.com/KibbeWater/wf-market", rev = "1e73c5c91f735d0cb2b0fbf1c5bd044b68a05bf9" }
+wf-market = { path = "C:/Users/Kenya/Desktop/Andet/Coding/Warframe/wf-market" }
+# wf-market = { git = "https://github.com/KibbeWater/wf-market", rev = "b006600a7d19265e844f90ace0b29eb44837d64e" }
 
 # Database dependencies
 migration = { path = "./migration" }
