Fixes dependency missing for `uuid v4`

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,6 +43,7 @@ regex = "1.9.1"
 chrono = "0.4"
 zip = "0.6"
 sha256 = "1.5.0"
+uuid = { version = "1.19.0",features = ["v4"] }
 # wf-market = { path = "C:/Users/Kenya/Desktop/Andet/Coding/Warframe/wf-market" }
 wf-market = { git = "https://github.com/KibbeWater/wf-market", rev = "022d3f5d856d1e4b6bd0aa90feac993583b3afd2" }
 
