--- a/docker/Dockerfile.ubuntu
+++ b/docker/Dockerfile.ubuntu
@@ -9,10 +9,13 @@ RUN apt-get update && apt-get install -y \
     pkg-config \
     libssl-dev \
     libwebkit2gtk-4.1-dev \
-    libappindicator3-dev \
     librsvg2-dev \
     libsoup-3.0-dev \
     libayatana-appindicator3-dev \
+    libseccomp-dev \
+    liblcms2-dev \
+    libkrb5-dev \
+    patchelf \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install Node.js (LTS version)
