--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@mantine/notifications": "8.3.8",
     "@mantine/tiptap": "8.3.8",
     "@tanstack/react-query": "^5.64.1",
-    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/api": "2.6.0",
     "@tauri-apps/plugin-clipboard-manager": "^2.3.0",
     "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-fs": "~2",
-    "@tauri-apps/plugin-http": "~2",
+    "@tauri-apps/plugin-fs": "2.3.0",
+    "@tauri-apps/plugin-http": "2.4.4",
     "@tauri-apps/plugin-notification": "~2",
     "@tauri-apps/plugin-os": "~2",
     "@tauri-apps/plugin-process": "~2",
