--- a/src-tauri/entity/Cargo.toml
+++ b/src-tauri/entity/Cargo.toml
@@ -9,6 +9,7 @@ name = "entity"
 path = "src/lib.rs"
 
 [dependencies]
+utils = { path = "../utils" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 uuid = {version = "1.17.0", features = ["v5"] }
