--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,8 @@ tauri-plugin-notification = "2.0.0"
 tauri-plugin-os = "2"
 tauri-plugin-clipboard-manager = "2.3.0"
 # Other dependencies
+aes = "0.8.4"
+cbc = { version = "0.1.2", features = ["std"] }
 reqwest = { version = "0.12.19", features = ["json"] }
 tokio = {version =  "1.45.1", features = ["full"] }
 regex = "1.9.1"
